src/style.css
:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  --text: #0f0f0f;
  --bg: #f6f6f6;

  --primary: #ffffff;

  --color: 173, 216, 230;
  --color-text: rgb(132, 180, 197);

  color: var(--text);
  background-color: var(--bg);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

* {
  padding: 0;
  margin: 0;
}

.container {
  margin: 2em 4em;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  gap: 0.4em;
}
.container h2 {
  font-weight: 500;
  color: rgb(157, 157, 157);
  padding: 4vh 0;
}
.flex {
  display: flex;
  align-items: center;
}
.flex button {
  margin: 0 0.28em;
}

.habits {
  min-height: 50vh;
  display: flex;
  flex-direction: column;
  gap: 0.2em;
}
.habitName {
  font-size: 1.2em;
  width: 30vw;
  cursor: pointer;
  text-align: start;
  margin-right: 1em;
}
.boxes {
  gap: 0 0.2em;
}
.box {
  width: 32px;
  height: 32px;
  background-color: var(--primary);
  color: var(--primary);
  border-radius: 8px;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
  justify-content: center !important;
  font-weight: 800;
}
.box:hover {
  color: var(--color-text);
}

.complete1,
.complete2,
.complete3,
.complete4,
.complete5,
.complete6,
.complete7 {
  color: rgb(255, 255, 255, 0);
}

.complete7 {
  background-color: rgb(var(--color));
}
.complete6 {
  background-color: rgb(var(--color), 0.8);
}
.complete5 {
  background-color: rgb(var(--color), 0.7);
}
.complete4 {
  background-color: rgb(var(--color), 0.6);
}
.complete3 {
  background-color: rgb(var(--color), 0.5);
}
.complete2 {
  background-color: rgb(var(--color), 0.4);
}
.complete1 {
  background-color: rgb(var(--color), 0.3);
}

input {
  border-radius: 8px;
  font-size: 1em;
  border: none;
  font-weight: 500;
  font-family: inherit;
  color: var(--text);
  background-color: var(--primary);
  transition: border-color 0.25s;
}

.addTask,
button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  color: var(--text);
  background-color: var(--primary);
  transition: border-color 0.25s;
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
}
button:hover {
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
}

@media (prefers-color-scheme: dark) {
  :root {
    --text: #f6f6f6;
    --bg: #1f1f1f;

    --primary: black;
    --color: 154, 107, 255;
    --color-text: rgb(189, 159, 255);

    color: var(--text);
    background-color: var(--bg);
  }
}

